<resources>
    <string name="app_name">Sophor - সফর </string>

    <string name="dailyPlan">\n<b>Day 1</b>\n\nCoxs Bazar is one of the longest sea beaches in the world. Its a sandy beach with an unbroken 155 Km length. There are large number of hotels, resorts, guest houses,
 motels and restaurants have been established in the city.\n\n<b>Day 2</b>\n\nCoxs Bazar is one of the longest sea beaches in the world. Its a sandy beach with an unbroken 155 Km length. There are large number of hotels, resorts, guest houses,
 motels and restaurants have been established in the city.\n\n<b>Day 3</b>\n\nCoxs Bazar is one of the longest sea beaches in the world. Its a sandy beach with an unbroken 155 Km length. There are large number of hotels, resorts, guest houses,
 motels and restaurants have been established in the city.</string>
    <string name="inclusion">✔ All Entry Tickets of Hopping Destinations\n✔ Welcome Breakfast\n✔ Lunch Platter\n✔ Evening Snacks\n✔ Washroom\n✔ Library\n✔ WIFI\n✔ Guide\n✔ Wrist band\n✔ First Aid Kit (In case of emergency)\n</string>

    <string name="exlusion">✕ Personal expenses\n✕ Anything else that isnt mentioned on Inclusions\n</string>
    <string name="policy">\n<b>Cancellation</b>\n\nTo cancel any tour, an email has to be sent to tours@sophor.com mentioning the tour booking ID and details about the cancellation.
The time of sending the email will be considered as the time of cancellation.
The email will be considered as the final application for cancellation. A phone call to the Sophor hotline number or any other team member of Go Zayaan will not be considered as a request for cancellation.

\n\n<b>Refund</b>\n\nThe full amount of the tour fee will be refunded if the booking is canceled twenty-four (24) hours prior to the start of the experience/tour.
No refund will be provided if the booking is canceled less than twenty-four (24) hours prior to the start of the experience/tour.
Convenience fee is non-refundable and will be deducted from the paid amount.
All refunds will be processed within seven (7) working days.
        \n\n<b>Child Policy</b>\n\nNo charge will be applied for kids below three (3) years old.
BDT 1,599 has to be paid for anyone between three (3) and seven (7) years old.
Full price has to be paid for anyone who is seven (7) years old.</string>
    <string name="title_activity_bottom_navigation">Bottom_Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="am_lake">AM Lake</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="signinpassword">Password</string>
    <string name="signin_email_address">Email Address</string>
    <string name="sign_in_now">Sign in Now</string>
    <string name="hey_welcome">Hey! Welcome</string>
    <string name="we_deliver_on_demand_organic_fresh_fruits_directly_from_your_nearby_farms">We deliver on demand organic fresh fruits directly from your nearby farms</string>
    <string name="get_started">Get Started</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="image">Image</string>
    <string name="hotel_motherchod">Hotel Motherchod</string>
    <string name="hotel_norjahan">Hotel Norjahan</string>
    <string name="hotel_sea_uttara">Hotel Sea Uttara</string>
    <string name="uttara_dhaka">Uttara,Dhaka</string>
    <string name="nothing">Nothing</string>
    <string name="one_step_close_to_paradise">Close to Paradise</string>

    <string-array name="planets_array">
        <item>Dhaka</item>
        <item>Mymensingh</item>
        <item>Barishal</item>
        <item>Chattogram</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
    </string-array>
</resources>
