<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:animateLayoutChanges="true"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/signup_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:gravity="center"
            android:paddingVertical="30dp"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/signup_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableStart="@drawable/profile_icon"
                android:drawablePadding="8dp"
                android:background="@drawable/search_bg"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#62878F"
                android:autofillHints="None" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/signup_number_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/search_bg"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="text|numberSigned"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#62878F"
                android:autofillHints="none" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/signup_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/search_bg"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#62878F"
                android:autofillHints="none" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/signup_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/search_bg"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#62878F"
                android:autofillHints="none" />


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:text="@string/sign_up"
            android:background="@drawable/btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/signup_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:padding="5dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>