<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    app:cardCornerRadius="6sp"
    app:cardElevation="4sp"
    android:layout_marginBottom="8sp"
    android:background="#ffffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hotel_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        >

    <ImageView
        android:id="@+id/hotel_image"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@id/hotel_constraint"
        app:layout_constraintStart_toStartOf="@id/hotel_constraint"
        app:layout_constraintTop_toTopOf="@id/hotel_constraint"
        app:srcCompat="@drawable/hotel1"
        android:contentDescription="@string/nothing" />

    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="3sp"
        android:layout_marginStart="4dp"
        android:text="@string/hotel_sea_uttara"
        app:layout_constraintStart_toStartOf="@id/hotel_image"
        app:layout_constraintTop_toBottomOf="@+id/hotel_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/hotel_image"
            app:layout_constraintTop_toBottomOf="@+id/hotel_name"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/hotel_location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_icon_for_hotel_booking"
 />

            <TextView
                android:id="@+id/hotel_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/uttara_dhaka"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


